<resources>
    <string name="app_name">Flynow</string>
    <string name="tittle_tab_home">Beranda</string>
    <string name="tittle_tab_history">Riwayat</string>
    <string name="tittle_tab_notification">Notifikasi\n</string>
    <string name="tittle_tab_account">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_one"> Welcome to FlyNow, experience seamless travel booking with FlyNow. </string>
    <string name="intro_two"> Ready to take off? Booking your flight has never been easier with FlyNow.</string>
    <string name="intro_three">Keep your personal information up-to-date, set your travel preferences, and access your booking history all in one place</string>
    <string name="text_email_nomor_telepon">Email / Nomor Telepon</string>
    <string name="text_masuk">Masuk</string>
    <string name="text_password">Password</string>
    <string name="text_forget_password">Lupa kata sandi</string>
    <string name="text_dont_have_account">Belum punya akun?</string>
    <string name="text_daftar_di_sini">Daftar di sini</string>
    <string name="text_daftar">Daftar</string>
    <string name="text_nama">Nama</string>
    <string name="text_email">Email</string>
    <string name="text_nomor_telepon">Nomor Telepon</string>
    <string name="text_buat_password">Buat Password</string>
    <string name="text_sudah_punya_akun">Sudah punya akun?</string>
    <string name="text_masuk_di_sini">Masuk di sini</string>
    <string name="passengers">Passengers</string>
    <string name="seat_class">Seat Class</string>
    <string name="search">Cari Penerbangan</string>
    <string name="seat_value">Business</string>
    <string name="passenger_value">%1$s Penumpang</string>
    <string name="depature">Depature</string>
    <string name="depature_value">1 Maret 2024</string>
    <string name="return_label">Return</string>
    <string name="date_return">Pilih Tanggal</string>
    <string name="date_return_value">3 Maret 2024</string>
    <string name="depature_return">Pulang-Pergi?</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="city_to">%1$s (%2$s)</string>
    <string name="city_from">%1$s (%2$s)</string>
    <string name="flight_destination">MLB</string>
    <string name="flight_departure">JKTA</string>
    <string name="hei_mau_kemana">Hei, Mau kemana?</string>
    <string name="destination_favorite">Destinasi Favorit</string>
    <string name="filter1">Harga</string>
    <string name="filter2">Termurah</string>
    <string name="space"> - </string>
    <string name="space2"> > </string>
    <string name="Choose">Pilih</string>
    <string name="price">IDR 4.950.000</string>
    <string name="time_arrive">11:00</string>
    <string name="time_departure">07:00</string>
    <string name="airline">Jet Air</string>
    <string name="filter">Filter</string>
    <string name="direct">Direct</string>
    <string name="time_spent">4h 0m</string>
    <string name="choose_flight">Pilihan Penerbangan</string>
    <string name="departure">Keberangkatan</string>
    <string name="airport_departure">Soekarno Hatta - Terminal 1A Domestik</string>
    <string name="number_plane">JT - 203</string>
    <string name="detail_information">Baggage 20 kg \nCabin baggage 7kg \nIn Flight Entertainment</string>
    <string name="information">Informasi :</string>
    <string name="back">Kedatangan</string>
    <string name="airport_return">Melbourne International Airport</string>
    <string name="total">Total</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="history_tittle"> Riwayat Pembelian</string>
    <string name="akun">Akun</string>
    <string name="accountSettings">Pengaturan Akun</string>
    <string name="edit_profile">Ubah Profile</string>
    <string name="logout_account">Keluar</string>
    <string name="notification_tittle_page">Notifikasi</string>
    <string name="must_login">Maaf, Anda harus login terlebih dahulu!</string>
    <string name="app_version">version:0.0.1</string>
    <string name="text_title_flight_details">Rincian Penerbangan</string>
    <string name="text_continue_to_pay">Lanjut Pembayaran</string>
    <string name="text_title_biodata_penumpang">Biodata Penumpang</string>
    <string name="text_title">Title</string>
    <string name="text_full_name">Nama Lengkap</string>
    <string name="text_til_full_name">Masukkan Nama Lengkap</string>
    <string name="text_switch">Punya Nama Keluarga?</string>
    <string name="text_family_name">Nama Keluarga</string>
    <string name="text_til_family_name">Masukkan Nama Keluarga</string>
    <string name="text_date">Tanggal Lahir</string>
    <string name="text_til_date">yyyy-mm-dd</string>
    <string name="text_nationality">Kewarganegaraan</string>
    <string name="text_til_nationality">Masukkan Kewarganegaraan</string>
    <string name="text_no_ktp_paspor">No. KTP/Paspor/KK</string>
    <string name="text_til_no_ktp_paspor">Masukkan No. KTP/Paspor/KK</string>
    <string name="text_negara_penerbit">Negara Penerbit</string>
    <string name="text_auto_negara_penerbit">Pilih Negara Penerbit</string>
    <string name="text_to_choose_seat">Lanjut Pilih Kursi</string>
    <string name="text_title_biodata_pemesan">Biodata Pemesan</string>
    <string name="text_no_telp">Nomor Telepon</string>
    <string name="text_til_no_telp">Masukkan Nomor Telepon</string>
    <string name="text_til_email">Masukkan Email</string>
    <string name="text_save">Simpan</string>
    <string name="text_otp">Ketik 6 digit kode yang dikirimkan ke email</string>
    <string name="text_input_email">Masukkan email</string>
    <string name="text_send_email_reset">Kirim</string>
    <string name="airport_location_format">%1$s, %2$s (%3$s)</string>
    <string name="binding_text_title_passenger_form">Penumpang %1$s - %2$s</string>
    <string name="binding_title_seat">%1$s - %2$s Kursi Tersedia</string>
    <string name="text_title_form_pemesan">Data Diri Pemesan</string>
    <string name="text_no_login">Maaf, Anda harus login terlebih dahulu!</string>
    <string name="text_login">Masuk</string>
    <string name="text_pilih_doc">Pilih Dokumen</string>
    <string name="text_til_exp_date">yyyy-mm-dd</string>
    <string name="text_exp_date">Berlaku Sampai</string>
    <string name="text_auto_complete">Pilih Title Anda</string>
    <string name="text_auto_ktp_paspor">Pilih Dokumen Anda</string>
    <string name="text_selamat">Selamat!</string>
    <string name="text_payment_success">Transaksi Pembayaran Tiket sukses!</string>
    <string name="text_publish_ticket">Terbitkan Tiket</string>
    <string name="name_profile_fragment">Name</string>
    <string name="name_email_fragment">email\n</string>
    <string name="booking_code">Booking Code :</string>
    <string name="jakarta">Jakarta</string>
    <string name="kodebooking">453653657</string>
    <string name="total_detail_history">Total</string>
    <string name="adults_label">%1$d Adults</string>
    <string name="children_label">%1$d Children</string>
    <string name="babies_label">%1$d Babies</string>

     <string name="price_label">Price: %d</string>
    <string name="childernText">%1$s</string>
    <string name="adultText">%1$s</string>
    <string name="babiesText">%1$s</string>
    <string name="anda_belum_memiliki_riwayat">Anda belum memiliki riwayat</string>
    <string name="anda_belum_memiliki_notifikasi">Anda belum memiliki notifikasi</string>
    <string name="detail_pesan">Detail Pesan</string>
    <string name="destinasi_favorit">Destinasi Favorit</string>
    <string name="mulai_dari">Mulai Dari</string>
    <string name="mulai_dari_home">Mulai Dari</string>
    <string name="discount">Discount: %1$s</string>
    <string name="tv_depature">Keberangkatan</string>
    <string name="tv_arrival">Kepulangan</string>
    <string name="depature_destination"><![CDATA[%1$s -> %2$s]]></string>
    <string name="terminal">%1$s - Terminal %2$s</string>
    <string name="pending">Pending</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="tiket_berhasil_dipesan">Tiket berhasil dipesan</string>
    <string name="kirim_ulang_otp_dalam">Kirim Ulang OTP dalam</string>
    <string name="detik">detik</string>
    <string name="capacity_72_seats">Capacity - 72 Seats</string>
    <string name="simpan_pesanan">Simpan pesanan</string>
    <string name="silahkan_login_kembali">Silahkan login kembali</string>
    <string name="membuat_pembayaran">membuat pembayaran</string>
    <string name="_register">Nama</string>
    <string name="email_register">email</string>
    <string name="no_telepon">+62 </string>
    <string name="password_register">Password</string>
    <string name="text_pilih_kursi">Pilih Kursi</string>


</resources>