<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tv_departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_departure"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/md_theme_primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_departure_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depature_value"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_departure_time"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_airport_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airport_departure"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_departure_date"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/iv_line1"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_airport_departure" />

        <ImageView
            android:id="@+id/iv_airline_departure"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_line1"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_information"
            android:src="@drawable/ic_airline" />

        <TextView
            android:id="@+id/tv_airline_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airline"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="4dp"
            app:layout_constraintStart_toEndOf="@id/iv_airline_departure"
            app:layout_constraintTop_toBottomOf="@id/tv_airport_departure" />

        <TextView
            android:id="@+id/tv_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="4dp"
            app:layout_constraintStart_toEndOf="@id/tv_airline_departure"
            app:layout_constraintTop_toBottomOf="@id/tv_airport_departure" />

        <TextView
            android:id="@+id/tv_seat_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seat_value"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="4dp"
            app:layout_constraintStart_toEndOf="@id/tv_space"
            app:layout_constraintTop_toBottomOf="@id/tv_airport_departure" />

        <TextView
            android:id="@+id/tv_number_plane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_plane"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="4dp"
            app:layout_constraintStart_toEndOf="@id/iv_airline_departure"
            app:layout_constraintTop_toBottomOf="@id/tv_airline_departure" />

        <TextView
            android:id="@+id/tv_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="4dp"
            app:layout_constraintStart_toEndOf="@id/iv_airline_departure"
            app:layout_constraintTop_toBottomOf="@id/tv_number_plane" />

        <TextView
            android:id="@+id/tv_detail_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/detail_information"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_return"
            app:layout_constraintStart_toEndOf="@id/iv_airline_departure"
            app:layout_constraintTop_toBottomOf="@id/tv_information" />

        <ImageView
            android:id="@+id/iv_line2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_information" />

        <TextView
            android:id="@+id/tv_return_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_arrive"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/iv_line2"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/md_theme_primary"
            app:layout_constraintTop_toBottomOf="@id/iv_line2"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_return_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_return_value"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_return_time"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_airport_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airport_return"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_return_date"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>