<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_departure_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_departure"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_time_spent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_spent"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_arrival_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_arrive"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/md_theme_primary"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="24dp"
            android:layout_marginStart="60dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_flight_departure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_departure"
                android:textStyle="bold"
                android:textSize="14sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direct"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_flight_arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_destination"
                android:textStyle="bold"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_airline"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:drawablePadding="8dp"
                android:src="@drawable/ic_airline"
                android:textSize="16sp"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/tv_airline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/airline"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/space"
                android:textSize="16sp"
                android:drawablePadding="8dp" />

            <TextView
                android:id="@+id/tv_seat_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat_value"
                android:textSize="16sp"
                android:drawablePadding="8dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
